# Milestone-6

./: .gitignore  .gitmodules  CALIBRATION_GUIDE.md  HAILO_INTEGRATION.md  JETSON_SETUP.md  LICENSE  QUICK_CALIBRATION.md  README.MD  arm_sequences.py  calibrate_autonomous.sh  calibrate_distance.sh  check_hailo.sh  check_topics.sh  code.txt  fetch_and_build.sh  find_and_recompile_yolo.sh  find_optimal_distance.sh  install-ros2-foxy-desktop.sh  kill_robot.sh  part2_mission.py  pyproject.toml  release_gstream.sh  run_part2.sh  test_camera.py  test_hailo.py
src/milestone6/: package.xml  setup.cfg  setup.py
src/milestone6/launch/: part1.launch.py  part2.launch.py  part2.launch.py.py  part3.base.launch.py  part3.jetson.launch.py  part3.launch.py  part3.nlp.launch.py  part3.tb3.launch.py  part4.jetson.launch.py  part4.tb3.launch.py  test.yolo.py
src/milestone6/milestone6/: client.py  coco.py  part1.py  part2.py  part3.py  part4.py  robot.py  server.py
src/milestone6/milestone6/api/: arm_sequences.py  espeak.py  llama.py
src/milestone6/milestone6/backends/: __init__.py  whisper.py
src/milestone6/milestone6/nlp/: __init__.py  cli.py  espeak.py  llama.py  prompts.py  whisper.py
src/milestone6/milestone6/publishers/: yolo.py
src/milestone6/milestone6/subscribers/: yolo.py
src/milestone6/milestone6/teleop/: __init__.py  arm.py  arm1.py  arm2.py  arm_calibrate.py  base.py  constants.py  pickup_controller.py  publisher.py  subscriber.py
src/milestone6/milestone6/util/: camera.py  launch.py  util.py
src/milestone6/milestone6/yolo/: debug_subscriber.py  publisher.py  (+2 more)
(+16 files in other folders)
