<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>milestone6</name>
  <version>0.0.0</version>
  <description>Integrates teleoperation, YOLO perception, and LLaMa-based language capabilities from previous milestones into a unified system deployed across the remote PC, Turtlebot Jetson, and Secondary Jetson, enabling end-to-end robot control, perception, and interaction.</description>
  <maintainer email="yzb2@txstate.edu">Andrew Scouten</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>control_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>open_manipulator_msgs</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
